mp-198: много вопросов с генерцией кода